@@ -7258,23 +7258,30 @@ class CPPDomain(Domain):
 
         if typ.startswith('cpp:'):
             typ = typ[4:]
+        origTyp = typ
         if typ == 'func':
             typ = 'function'
+        if typ == 'struct':
+            typ = 'class'
         declTyp = s.declaration.objectType
 
         def checkType():
             if typ == 'any' or typ == 'identifier':
                 return True
             if declTyp == 'templateParam':
+                # TODO: perhaps this should be strengthened one day
                 return True
+            if declTyp == 'functionParam':
+                if typ == 'var' or typ == 'member':
+                    return True
             objtypes = self.objtypes_for_role(typ)
             if objtypes:
                 return declTyp in objtypes
-            print("Type is %s, declType is %s" % (typ, declTyp))
+            print("Type is %s (originally: %s), declType is %s" % (typ, origTyp, declTyp))
             assert False
         if not checkType():
             warner.warn("cpp:%s targets a %s (%s)."
-                        % (typ, s.declaration.objectType,
+                        % (origTyp, s.declaration.objectType,
                            s.get_full_nested_name()))
 
         declaration = s.declaration
